--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/cart.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/cart.html
@@ -10,16 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dooplo - Gaming HTML Template</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <!-- Plugin css -->
-    <link rel="stylesheet" href="assets/css/plugin.css">
+    <link rel="stylesheet" href="{% static 'assets/css/plugin.css' %}">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <!-- responsive -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 </head>
 
 <body>
@@ -185,7 +185,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html">
-								<img src="assets/images/logo.png" alt="">
+								<img src="{% static 'assets/images/logo.png' %}" alt="">
 							</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
@@ -250,7 +250,7 @@
 
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area cart">
-        <img class="bc-img" src="assets/images/breadcrumb/cart-bg.png" alt="">
+        <img class="bc-img" src="{% static 'assets/images/breadcrumb/cart-bg.png' %}" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -322,7 +322,7 @@
                                             </ul>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="qty">
@@ -347,7 +347,7 @@
                                             <span class="time">30 mins.left</span>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="remove">
@@ -366,7 +366,7 @@
                                             </ul>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="qty">
@@ -391,7 +391,7 @@
                                             <span class="time">30 mins.left</span>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="remove">
@@ -410,7 +410,7 @@
                                             </ul>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="qty">
@@ -435,7 +435,7 @@
                                             <span class="time">30 mins.left</span>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="remove">
@@ -454,7 +454,7 @@
                                             </ul>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="qty">
@@ -479,7 +479,7 @@
                                             <span class="time">30 mins.left</span>
                                         </td>
                                         <td>
-                                            <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                            <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                                         </td>
                                         <td>
                                             <div class="remove">
@@ -495,7 +495,7 @@
                         <div class="content">
                             <span>Total to Pay:</span>
                             <div class="num">
-                                <img src="assets/images/icon1.png" alt=""> 0.00000051
+                                <img src="{% static 'assets/images/icon1.png' %}" alt=""> 0.00000051
                             </div>
                         </div>
                     </div>
@@ -522,7 +522,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/dabit-card.png" alt="">
+                                    <img src="{% static 'assets/images/payment/dabit-card.png' %}" alt="">
                                 </div>
                                 <span>Credit Card</span>
                             </a>
@@ -530,7 +530,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/dabit-card.png" alt="">
+                                    <img src="{% static 'assets/images/payment/dabit-card.png' %}" alt="">
                                 </div>
                                 <span>Dabit Card</span>
                             </a>
@@ -538,7 +538,7 @@
                         <div class="item">
                             <a href="#" class="single-method active">
                                 <div class="icon">
-                                    <img src="assets/images/payment/paypal.png" alt="">
+                                    <img src="{% static 'assets/images/payment/paypal.png' %}" alt="">
                                 </div>
                                 <span>Paypal</span>
                             </a>
@@ -546,7 +546,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/bitcoin.png" alt="">
+                                    <img src="{% static 'assets/images/payment/bitcoin.png' %}" alt="">
                                 </div>
                                 <span>Bitcoin</span>
                             </a>
@@ -554,7 +554,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/litecoin.png" alt="">
+                                    <img src="{% static 'assets/images/payment/litecoin.png' %}" alt="">
                                 </div>
                                 <span>Litecoin</span>
                             </a>
@@ -562,7 +562,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/ether.png" alt="">
+                                    <img src="{% static 'assets/images/payment/ether.png' %}" alt="">
                                 </div>
                                 <span>Ethereum</span>
                             </a>
@@ -570,7 +570,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/rippel.png" alt="">
+                                    <img src="{% static 'assets/images/payment/rippel.png' %}" alt="">
                                 </div>
                                 <span>Ripple </span>
                             </a>
@@ -578,7 +578,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/bitcoin.png" alt="">
+                                    <img src="{% static 'assets/images/payment/bitcoin.png' %}" alt="">
                                 </div>
                                 <span>Bitcoin</span>
                             </a>
@@ -586,7 +586,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/litecoin.png" alt="">
+                                    <img src="{% static 'assets/images/payment/litecoin.png' %}" alt="">
                                 </div>
                                 <span>Litecoin</span>
                             </a>
@@ -594,7 +594,7 @@
                         <div class="item">
                             <a href="#" class="single-method">
                                 <div class="icon">
-                                    <img src="assets/images/payment/ether.png" alt="">
+                                    <img src="{% static 'assets/images/payment/ether.png' %}" alt="">
                                 </div>
                                 <span>Ethereum</span>
                             </a>
@@ -632,7 +632,7 @@
                                     </div>
                                     <div class="col-lg-3 col-4 d-flex align-self-center">
                                         <div class="icon">
-                                            <img src="assets/images/mail-box.png" alt="">
+                                            <img src="{% static 'assets/images/mail-box.png' %}" alt="">
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-8 d-flex align-self-center">
@@ -865,7 +865,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -917,7 +917,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -968,19 +968,19 @@
     <!-- SignIn Area End -->
 
     <!-- jquery -->
-    <script src="assets/js/jquery.js"></script>
+    <script src="{% static 'assets/js/jquery.js' %}"></script>
     <!-- popper -->
-    <script src="assets/js/popper.min.js"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
     <!-- bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
     <!-- plugin js-->
-    <script src="assets/js/plugin.js"></script>
+    <script src="{% static 'assets/js/plugin.js' %}"></script>
 
     <!-- MpusemoverParallax JS-->
-    <script src="assets/js/TweenMax.js"></script>
-    <script src="assets/js/mousemoveparallax.js"></script>
+    <script src="{% static 'assets/js/TweenMax.js' %}"></script>
+    <script src="{% static 'assets/js/mousemoveparallax.js' %}"></script>
     <!-- main -->
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 </body>
 
 </html>
