--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/affiliate.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/affiliate.html
@@ -10,16 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Dooplo - Gaming HTML Template</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <!-- Plugin css -->
-    <link rel="stylesheet" href="assets/css/plugin.css">
+    <link rel="stylesheet" href="{% static 'assets/css/plugin.css' %}">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <!-- responsive -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 </head>
 
 <body>
@@ -185,7 +185,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html">
-								<img src="assets/images/logo.png" alt="">
+								<img src="{% static 'assets/images/logo.png' %}" alt="">
 							</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
@@ -250,7 +250,7 @@
 
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area bc-affiliate">
-        <img class="bc-img" src="assets/images/breadcrumb/affiliate.png" alt="">
+        <img class="bc-img" src="{% static 'assets/images/breadcrumb/affiliate.png' %}" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -283,7 +283,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="single-process">
-                        <img src="assets/images/affiliate/ps1.png" alt="">
+                        <img src="{% static 'assets/images/affiliate/ps1.png' %}" alt="">
                         <span class="num">1</span>
                         <h4 class="title">
                             Join
@@ -295,7 +295,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="single-process">
-                        <img src="assets/images/affiliate/ps2.png" alt="">
+                        <img src="{% static 'assets/images/affiliate/ps2.png' %}" alt="">
                         <span class="num">2</span>
                         <h4 class="title">
                             Promote
@@ -307,7 +307,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="single-process">
-                        <img src="assets/images/affiliate/ps3.png" alt="">
+                        <img src="{% static 'assets/images/affiliate/ps3.png' %}" alt="">
                         <span class="num">3</span>
                         <h4 class="title">
                             Earn
@@ -345,7 +345,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-program">
                         <div class="icon one">
-                            <img src="assets/images/affiliate/ic1.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic1.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -358,7 +358,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-program">
                         <div class="icon four">
-                            <img src="assets/images/affiliate/ic2.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic2.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -371,7 +371,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-program">
                         <div class="icon two">
-                            <img src="assets/images/affiliate/ic3.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic3.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -384,7 +384,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-program">
                         <div class="icon two">
-                            <img src="assets/images/affiliate/ic4.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic4.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -397,7 +397,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-program">
                         <div class="icon three">
-                            <img src="assets/images/affiliate/ic5.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic5.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -410,7 +410,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single-program">
                         <div class="icon three">
-                            <img src="assets/images/affiliate/ic6.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic6.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -427,7 +427,7 @@
 
     <!-- Ref Commission Area Start -->
     <section class="ref-commission">
-        <img class="ab-img" src="assets/images/affiliate/ref-comm.png" alt="">
+        <img class="ab-img" src="{% static 'assets/images/affiliate/ref-comm.png' %}" alt="">
         <div class="container">
             <div class="row justify-content-end">
                 <div class="col-lg-7">
@@ -474,7 +474,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-tools">
                         <div class="icon one">
-                            <img src="assets/images/affiliate/ic7.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic7.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -489,7 +489,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-tools">
                         <div class="icon two">
-                            <img src="assets/images/affiliate/ic8.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic8.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -504,7 +504,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-tools">
                         <div class="icon three">
-                            <img src="assets/images/affiliate/ic9.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic9.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -519,7 +519,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="single-tools">
                         <div class="icon three">
-                            <img src="assets/images/affiliate/ic10.png" alt="">
+                            <img src="{% static 'assets/images/affiliate/ic10.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -561,7 +561,7 @@
 
                             <div class="people">
                                 <div class="img">
-                                    <img src="assets/images/review.png" alt="">
+                                    <img src="{% static 'assets/images/review.png' %}" alt="">
                                 </div>
                                 <h4 class="title">Kevin Ohashi</h4>
                                 <p class="designation">CEO OF APPLE</p>
@@ -576,7 +576,7 @@
 
                             <div class="people">
                                 <div class="img">
-                                    <img src="assets/images/review.png" alt="">
+                                    <img src="{% static 'assets/images/review.png' %}" alt="">
                                 </div>
                                 <h4 class="title">Mamun Khan</h4>
                                 <p class="designation">CEO OF APPLE</p>
@@ -615,7 +615,7 @@
                                     </div>
                                     <div class="col-lg-3 col-4 d-flex align-self-center">
                                         <div class="icon">
-                                            <img src="assets/images/mail-box.png" alt="">
+                                            <img src="{% static 'assets/images/mail-box.png' %}" alt="">
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-8 d-flex align-self-center">
@@ -848,7 +848,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -900,7 +900,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -951,19 +951,19 @@
     <!-- SignIn Area End -->
 
     <!-- jquery -->
-    <script src="assets/js/jquery.js"></script>
+    <script src="{% static 'assets/js/jquery.js' %}"></script>
     <!-- popper -->
-    <script src="assets/js/popper.min.js"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
     <!-- bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
     <!-- plugin js-->
-    <script src="assets/js/plugin.js"></script>
+    <script src="{% static 'assets/js/plugin.js' %}"></script>
 
     <!-- MpusemoverParallax JS-->
-    <script src="assets/js/TweenMax.js"></script>
-    <script src="assets/js/mousemoveparallax.js"></script>
+    <script src="{% static 'assets/js/TweenMax.js' %}"></script>
+    <script src="{% static 'assets/js/mousemoveparallax.js' %}"></script>
     <!-- main -->
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 </body>
 
 </html>
