--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/awards.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/awards.html
@@ -10,16 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dooplo - Gaming HTML Template</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <!-- Plugin css -->
-    <link rel="stylesheet" href="assets/css/plugin.css">
+    <link rel="stylesheet" href="{% static 'assets/css/plugin.css' %}">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <!-- responsive -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 </head>
 
 <body>
@@ -185,7 +185,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html">
-								<img src="assets/images/logo.png" alt="">
+								<img src="{% static 'assets/images/logo.png' %}" alt="">
 							</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
@@ -250,7 +250,7 @@
 
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area bc-awards">
-        <img class="bc-img" src="assets/images/breadcrumb/awards.png" alt="">
+        <img class="bc-img" src="{% static 'assets/images/breadcrumb/awards.png' %}" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -300,7 +300,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-awards">
                         <div class="content">
-                            <img src="assets/images/awards/ic1.png" alt="">
+                            <img src="{% static 'assets/images/awards/ic1.png' %}" alt="">
                             <h4 class="title">
                                 Luck power
                             </h4>
@@ -314,7 +314,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-awards">
                         <div class="content">
-                            <img src="assets/images/awards/ic2.png" alt="">
+                            <img src="{% static 'assets/images/awards/ic2.png' %}" alt="">
                             <h4 class="title">
                                 Zero Hunter
                             </h4>
@@ -328,7 +328,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-awards">
                         <div class="content">
-                            <img src="assets/images/awards/ic3.png" alt="">
+                            <img src="{% static 'assets/images/awards/ic3.png' %}" alt="">
                             <h4 class="title">
                                 BTC Top
                             </h4>
@@ -342,7 +342,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-awards">
                         <div class="content">
-                            <img src="assets/images/awards/ic4.png" alt="">
+                            <img src="{% static 'assets/images/awards/ic4.png' %}" alt="">
                             <h4 class="title">
                                 BTC King
                             </h4>
@@ -356,7 +356,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-awards">
                         <div class="content">
-                            <img src="assets/images/awards/ic5.png" alt="">
+                            <img src="{% static 'assets/images/awards/ic5.png' %}" alt="">
                             <h4 class="title">
                                 Money Bag
                             </h4>
@@ -370,7 +370,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="single-awards">
                         <div class="content">
-                            <img src="assets/images/awards/ic6.png" alt="">
+                            <img src="{% static 'assets/images/awards/ic6.png' %}" alt="">
                             <h4 class="title">
                                 BTC Top
                             </h4>
@@ -393,7 +393,7 @@
                 <div class="col-lg-6">
                     <div class="single-box">
                         <div class="img">
-                            <img src="assets/images/team/community-icon.png" alt="">
+                            <img src="{% static 'assets/images/team/community-icon.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -408,7 +408,7 @@
                 <div class="col-lg-6">
                     <div class="single-box">
                         <div class="img">
-                            <img src="assets/images/team/blog-icon.png" alt="">
+                            <img src="{% static 'assets/images/team/blog-icon.png' %}" alt="">
                         </div>
                         <div class="content">
                             <h4 class="title">
@@ -446,7 +446,7 @@
                                     </div>
                                     <div class="col-lg-3 col-4 d-flex align-self-center">
                                         <div class="icon">
-                                            <img src="assets/images/mail-box.png" alt="">
+                                            <img src="{% static 'assets/images/mail-box.png' %}" alt="">
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-8 d-flex align-self-center">
@@ -679,7 +679,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -731,7 +731,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -782,19 +782,19 @@
     <!-- SignIn Area End -->
 
     <!-- jquery -->
-    <script src="assets/js/jquery.js"></script>
+    <script src="{% static 'assets/js/jquery.js' %}"></script>
     <!-- popper -->
-    <script src="assets/js/popper.min.js"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
     <!-- bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
     <!-- plugin js-->
-    <script src="assets/js/plugin.js"></script>
+    <script src="{% static 'assets/js/plugin.js' %}"></script>
 
     <!-- MpusemoverParallax JS-->
-    <script src="assets/js/TweenMax.js"></script>
-    <script src="assets/js/mousemoveparallax.js"></script>
+    <script src="{% static 'assets/js/TweenMax.js' %}"></script>
+    <script src="{% static 'assets/js/mousemoveparallax.js' %}"></script>
     <!-- main -->
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 </body>
 
 </html>
