--- a/CryptoWheelSpin/wheelspin/templates/wheelspin/how-it-work.html
+++ b/CryptoWheelSpin/wheelspin/templates/wheelspin/how-it-work.html
@@ -10,16 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Dooplo - Gaming HTML Template</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <!-- Plugin css -->
-    <link rel="stylesheet" href="assets/css/plugin.css">
+    <link rel="stylesheet" href="{% static 'assets/css/plugin.css' %}">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     <!-- responsive -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="{% static 'assets/css/responsive.css' %}">
 </head>
 
 <body>
@@ -185,7 +185,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <a class="navbar-brand" href="index.html">
-								<img src="assets/images/logo.png" alt="">
+								<img src="{% static 'assets/images/logo.png' %}" alt="">
 							</a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_menu" aria-controls="main_menu" aria-expanded="false" aria-label="Toggle navigation">
 								<span class="navbar-toggler-icon"></span>
@@ -250,7 +250,7 @@
 
     <!-- Breadcrumb Area Start -->
     <section class="breadcrumb-area h-i-w">
-        <img class="bc-img" src="assets/images/breadcrumb/how-it-work.png" alt="">
+        <img class="bc-img" src="{% static 'assets/images/breadcrumb/how-it-work.png' %}" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -298,7 +298,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="single-h-play">
-                        <img src="assets/images/h-play/ic1.png" alt="">
+                        <img src="{% static 'assets/images/h-play/ic1.png' %}" alt="">
                         <p class="steps">
                             First step <i class="fas fa-arrow-right"></i>
                         </p>
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="single-h-play">
-                        <img src="assets/images/h-play/ic2.png" alt="">
+                        <img src="{% static 'assets/images/h-play/ic2.png' %}" alt="">
                         <p class="steps">
                             SECOND STEP <i class="fas fa-arrow-right"></i>
                         </p>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="single-h-play">
-                        <img src="assets/images/h-play/ic3.png" alt="">
+                        <img src="{% static 'assets/images/h-play/ic3.png' %}" alt="">
                         <p class="steps">
                             THIRD STEP <i class="fas fa-arrow-right"></i>
                         </p>
@@ -331,7 +331,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="single-h-play">
-                        <img src="assets/images/h-play/ic4.png" alt="">
+                        <img src="{% static 'assets/images/h-play/ic4.png' %}" alt="">
                         <p class="steps">
                             fourth STEP <i class="fas fa-arrow-right"></i>
                         </p>
@@ -352,7 +352,7 @@
                 <div class="col-lg-10">
                     <div class="video-box">
                         <a href="#" class="video-play-btn video-icon mfp-iframe">
-							<img src="assets/images/play-icon-red.png" alt="">
+							<img src="{% static 'assets/images/play-icon-red.png' %}" alt="">
 						</a>
                     </div>
                 </div>
@@ -366,7 +366,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="assets/images/question-left.png" alt="">
+                    <img src="{% static 'assets/images/question-left.png' %}" alt="">
                 </div>
                 <div class="col-lg-6">
                     <div class="section-heading">
@@ -429,7 +429,7 @@
                                 0.099 ETH
                             </div>
                             <div class="right">
-                                <img src="assets/images/icon2.png" alt="">
+                                <img src="{% static 'assets/images/icon2.png' %}" alt="">
                             </div>
                         </div>
                     </div>
@@ -454,7 +454,7 @@
                                 0.099 ETH
                             </div>
                             <div class="right">
-                                <img src="assets/images/icon2.png" alt="">
+                                <img src="{% static 'assets/images/icon2.png' %}" alt="">
                             </div>
                         </div>
                     </div>
@@ -479,7 +479,7 @@
                                 0.099 ETH
                             </div>
                             <div class="right">
-                                <img src="assets/images/icon2.png" alt="">
+                                <img src="{% static 'assets/images/icon2.png' %}" alt="">
                             </div>
                         </div>
                     </div>
@@ -515,7 +515,7 @@
                                     </div>
                                     <div class="col-lg-3 col-4 d-flex align-self-center">
                                         <div class="icon">
-                                            <img src="assets/images/mail-box.png" alt="">
+                                            <img src="{% static 'assets/images/mail-box.png' %}" alt="">
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-8 d-flex align-self-center">
@@ -748,7 +748,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -800,7 +800,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <div class="modal-body">
                     <div class="logo-area">
-                        <img class="logo" src="assets/images/logo.png" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                     </div>
                     <div class="header-area">
                         <h4 class="title">Great to have you back!</h4>
@@ -851,19 +851,19 @@
     <!-- SignIn Area End -->
 
     <!-- jquery -->
-    <script src="assets/js/jquery.js"></script>
+    <script src="{% static 'assets/js/jquery.js' %}"></script>
     <!-- popper -->
-    <script src="assets/js/popper.min.js"></script>
+    <script src="{% static 'assets/js/popper.min.js' %}"></script>
     <!-- bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
     <!-- plugin js-->
-    <script src="assets/js/plugin.js"></script>
+    <script src="{% static 'assets/js/plugin.js' %}"></script>
 
     <!-- MpusemoverParallax JS-->
-    <script src="assets/js/TweenMax.js"></script>
-    <script src="assets/js/mousemoveparallax.js"></script>
+    <script src="{% static 'assets/js/TweenMax.js' %}"></script>
+    <script src="{% static 'assets/js/mousemoveparallax.js' %}"></script>
     <!-- main -->
-    <script src="assets/js/main.js"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
 </body>
 
 </html>
